--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,35 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     font-family: Tahoma, Arial;
 }
 
-.slider-container{
+.slider-container {
     margin: 10px auto;
     width: 800px;
-    height: 250px;
+    height: 400px;
     position: relative;
 }
-.slider-container img{
+
+.slider-container img {
     position: absolute;
     opacity: 0;
     transition: opacity 1s;
     z-index: 1;
-    width: 300px;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
-.slider-container img.active{
+
+.slider-container img.active {
     opacity: 1;
 }
-.slider-container .slide-number{
+
+.slider-container .slide-number {
     font-size: 20px;
     z-index: 2;
     position: absolute;
@@ -35,13 +40,15 @@ body{
     padding: 5px 10px;
     border-radius: 6px;
 }
-.slider-control{
+
+.slider-control {
     width: 800px;
     margin: auto;
     overflow: hidden;
 }
+
 .slider-control .prev,
-.slider-control .next{
+.slider-control .next {
     background-color: #009688;
     padding: 5px;
     border-radius: 6px;
@@ -50,29 +57,34 @@ body{
     width: 20%;
     font-size: 16px;
     cursor: pointer;
-    user-select: none;
 }
-.slider-control .prev{
+
+.slider-control .prev {
     float: left;
 }
-.slider-control .next{
+
+.slider-control .next {
     float: right;
-} 
+}
+
 .slider-control .prev.disabled,
-.slider-control .next.disabled{
+.slider-control .next.disabled {
     background-color: #00968880;
     cursor: no-drop;
 }
-.slider-control .indicators{
+
+.slider-control .indicators {
     width: 60%;
     float: left;
 }
-.slider-control .indicators ul{
+
+.slider-control .indicators ul {
     list-style: none;
     margin: 0;
     text-align: center;
 }
-.slider-control .indicators ul li{
+
+.slider-control .indicators ul li {
     display: inline-block;
     background: #f6f6f6;
     color: #333;
@@ -84,7 +96,8 @@ body{
     font-weight: bold;
     cursor: pointer;
 }
-.slider-control .indicators ul li.active{
+
+.slider-control .indicators ul li.active {
     background-color: #009688;
     color: #fff;
 }
